Let moderators send messages from the subreddit.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -10137,3 +10137,7 @@ body.banned.deleted div#header {
   background-color: #999;
   background-image: repeating-linear-gradient(45deg, transparent, transparent 30px, #cf6165 30px, #cf6165 60px);
 }
+
+#compose-message select {
+    font-size: 100%;
+}
