--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -59,6 +59,7 @@ ${captcha_field()}
       ${error_field("USER_DOESNT_EXIST", "to")}
       ${error_field("SUBREDDIT_NOEXIST", "to")}
       ${error_field("USER_BLOCKED", "to")}
+      ${error_field("USER_BLOCKED_MESSAGE", "to")}
     </%utils:round_field>
   </div>
 </%def>
