--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -401,9 +401,17 @@
   %endif
   %if thing.recipient:
     ${self.banbuttons()}
-      %if not getattr(thing.thing, "from_sr", False) and (not thing.was_comment or thing.thing.message_style == "mention") and thing.thing.author_id != c.user._id and thing.thing.author_id not in c.user.enemies:
+      %if (not thing.was_comment or thing.thing.message_style == "mention") and thing.thing.author_id != c.user._id and thing.thing.author_id not in c.user.enemies:
         <li>
-          ${ynbutton(_("block user"), _("blocked"), "block", "hide_thing")}
+          %if getattr(thing.thing, "from_sr", False):
+            %if getattr(thing.thing, "sr_blocked", False):
+              ${ynbutton(_("unblock subreddit"), _("unblocked"), "unblock_subreddit")}
+            %else:
+              ${ynbutton(_("block subreddit"), _("blocked"), "block", "hide_thing")}
+            %endif
+          %else:
+            ${ynbutton(_("block user"), _("blocked"), "block", "hide_thing")}
+          %endif
         </li>
       %endif
     <li class="unread">
