--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -36,6 +36,7 @@
   r.sponsored.init();
   r.sponsored.set_form_render_fnc(r.sponsored.fill_campaign_editor);
   r.sponsored.setup(${unsafe(simplejson.dumps(thing.inventory))},
+                    ${unsafe(simplejson.dumps(thing.price_dict))},
                     ${simplejson.dumps(not thing.campaigns)},
                     ${simplejson.dumps(c.user_is_sponsor)});
   r.sponsored.setup_geotargeting(${unsafe(simplejson.dumps(thing.regions))},
@@ -320,10 +321,7 @@
                   onkeyup="r.sponsored.on_bid_change()"
                   value="${'%.2f' % g.default_promote_bid}"
                   data-default_bid="${g.default_promote_bid}"
-                  data-min_bid="${thing.min_bid}"
-                  data-base_cpm="${thing.author.cpm_selfserve_pennies}"
-                  data-geotarget_metro_cpm="${g.cpm_selfserve_geotarget_metro.pennies}"
-                  data-collection_cpm="${g.cpm_selfserve_collection.pennies}"/>
+                  data-min_bid="${thing.min_bid}"/>
           <div class="minimum-spend">
             ${_('%(minimum)s minimum') % dict(minimum=format_currency(thing.min_bid, 'USD', locale=c.locale))}
           </div>
