Security prefs: consistencize periods
I just noticed this while poking around and thought, well, we might as well
make things consistent.  Ending punctuation and lack of leading capitals seems
to be the standard in this file (and somewhat through preferences in general).

--- a/r2/r2/templates/prefsecurity.html
+++ b/r2/r2/templates/prefsecurity.html
@@ -41,8 +41,8 @@
 
 ${_md(
     " * enabling this preference will ensure your browser communicates with reddit over a secure channel when logged in.\n"
-    " * enabling this preference will disable the \"display links with a reddit toolbar\" preference\n"
-    " * some third-party apps may not support this preference\n"
+    " * enabling this preference will disable the \"display links with a reddit toolbar\" preference.\n"
+    " * some third-party apps may not support this preference.\n"
     " * changing this preference *will log you out of reddit on other devices*, and will invalidate your old private RSS feeds.",
 wrap=True)}
 
